--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@octokit/rest": "^18.0.9",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
@@ -16,6 +17,8 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "eslint": "^7.13.0",
+    "prettier": "^2.1.2",
     "typescript": "4.0"
   },
   "license": "MIT"
